Regression: Custom split normals of hidden faces/vertices remain visible (AMD GPU) #97828

Closed
opened 2022-05-04 06:39:02 +02:00 by Etienne de la Rosa · 12 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: Radeon RX 560 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.4.2 30.0.15021.7000

Blender Version
Broken: version: 3,3, b73dc36859
Worked: 2.93, 7223a0348f
Caused by 2262d6c45a

Short description of error
As stated in the title, the custom split normals of a vertex will remain visible even when hiding said vertex.

Exact steps for others to reproduce the error

  • On fresh default cube scene
  • Select default cube and go into edit mode
  • Enable normal display (adjust length to your liking): {nav Viewport Overlays > Normals > Display Split Normals}
  • Hide any or all vertices; the face and corner normals will hide as expected, but the split normals will remain visible.

Test File:
#97828.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: Radeon RX 560 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.4.2 30.0.15021.7000 **Blender Version** Broken: version: 3,3, `b73dc36859` Worked: 2.93, `7223a0348f` Caused by 2262d6c45a **Short description of error** As stated in the title, the custom split normals of a vertex will remain visible even when hiding said vertex. **Exact steps for others to reproduce the error** - On fresh default cube scene - Select default cube and go into edit mode - Enable normal display (adjust length to your liking): {nav Viewport Overlays > Normals > Display Split Normals} - Hide any or all vertices; the face and corner normals will hide as expected, but the split normals will remain visible. Test File: [#97828.blend](https://archive.blender.org/developer/F13050463/T97828.blend)

Added subscriber: @Yuurei

Added subscriber: @Yuurei
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Pratik Borhade changed title from Custom split normals of hidden faces/vertices remain visible. to Regression: Custom split normals of hidden faces/vertices remain visible. 2022-05-04 07:07:50 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

If this is a regression, could be set to High prio (and bisected if possible).

However, on my end, I cannot reproduce this

**System Information**
Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44
version: 3.3.0 Alpha, branch: master, commit date: 2022-05-03 07:50, hash: `rB8e71ba12e52d`
If this is a regression, could be set to High prio (and bisected if possible). However, on my end, I cannot reproduce this ``` **System Information** Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 version: 3.3.0 Alpha, branch: master, commit date: 2022-05-03 07:50, hash: `rB8e71ba12e52d` ```
Member

However, on my end, I cannot reproduce this

So I tested this again.

Neither I'm able to reproduce when I run blender with intel iGPU.
With dedicated AMD GPU I can repro.

I'll do the bisect. Will take some time.

> However, on my end, I cannot reproduce this So I tested this again. Neither I'm able to reproduce when I run blender with intel iGPU. With dedicated AMD GPU I can repro. I'll do the bisect. Will take some time.
Philipp Oeser changed title from Regression: Custom split normals of hidden faces/vertices remain visible. to Regression: Custom split normals of hidden faces/vertices remain visible (AMD GPU) 2022-05-05 13:50:48 +02:00
Member

Will raise prio since it is a regression, bisect from @PratikPB2123 incoming...

Will raise prio since it is a regression, bisect from @PratikPB2123 incoming...
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Sorry for the delay, just finished bisecting. This was introduced in 2262d6c45a
@Jeroen-Bakker , can you check?

Sorry for the delay, just finished bisecting. This was introduced in 2262d6c45a @Jeroen-Bakker , can you check?
Jeroen Bakker self-assigned this 2022-05-23 10:30:23 +02:00
Member

The artifact is a limitation of the workaround. There isn't enough space in the buffers to store them.
I did test if the latest windows drivers fixed the original issue and that seems to be the case for at least Polaris based cards.

Will disable commonly used polaris architectures from the work-around as a fix. (rx400 + rx500) desktop cards.

Using the latest wqhl amd drivers (22.5.1)

Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005
The artifact is a limitation of the workaround. There isn't enough space in the buffers to store them. I did test if the latest windows drivers fixed the original issue and that seems to be the case for at least Polaris based cards. Will disable commonly used polaris architectures from the work-around as a fix. (rx400 + rx500) desktop cards. Using the latest wqhl amd drivers (22.5.1) ``` Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005 ```

This issue was referenced by d1340e1bb2

This issue was referenced by d1340e1bb250f6ec4b9781f4b9c5f01a9e4da9e9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97828
No description provided.