Re-add workaround for AMD Polaris GPUs (revert Blender T97828), fixes #18, #19